# pitchpredict

./: .gitignore  README.md  eval_results.json  pyproject.toml  stats.txt
.github/workflows/: python-publish.yml
docs/: algorithms.md  caching.md  cli.md  getting-started.md  index.md  installation.md  python-api.md  rest-api.md  xlstm_refactor_spec.md
docs/similarity/: batted-ball.md  batter-prediction.md  configuration.md  data-columns.md  examples.md  index.md  pitcher-prediction.md
new_category_analysis/: claudes_thoughts.md  comprehensive_analysis.json
scripts/: accuracy_by_pitch_number.py  analyze_predictions.py  analyze_token_categories.py  benchmark_vectorized.py  build_dataset_fast.py  build_deep_model.py  build_test_dataset.py  compute_baselines.py  detailed_eval_xlstm.py  eval_xlstm.py  fetch_pitches.py  fix_session_tokens.py  inspect_dataset.py  inspect_session.py  inspect_sessions.py  load_pitch_tokens.py  split_pitch_dataset.py  stream_xlstm_inference.py  test_vectorized.py  test_vectorized_compat.py  xlstm.py
src/pitchpredict/: api.py  cli.py  server.py
src/pitchpredict/backend/: caching.py  fetching.py  logging.py  xlstm.py
src/pitchpredict/backend/algs/: __init__.py  base.py
src/pitchpredict/cli/: __init__.py  __main__.py  output.py  utils.py
src/pitchpredict/cli/commands/: __init__.py  cache.py  player.py  predict.py  serve.py  version.py
src/pitchpredict/types/: api.py  deep.py  server.py
src/pitchpredict/utils/: player_lookup.py  version.py
tests/: test_api_predict_pitcher.py  test_batted_ball_endpoint.py  test_cli.py  test_deep_building.py  test_fetching_cache.py  test_pitcher_batter_endpoints.py  test_similarity_algorithm.py  test_xlstm_grammar.py  test_xlstm_sequence.py  test_xlstm_validation.py
tools/: build_dataset_fast.py  detailed_eval_xlstm.py  eval_xlstm.py  inspect_dataset.py  inspect_session.py  inspect_sessions.py  split_pitch_dataset.py  stream_xlstm_inference.py  test_xlstm_e2e.py  xlstm.py
tools/analysis/: accuracy_by_pitch_number.py  analyze_predictions.py  analyze_token_categories.py  compute_baselines.py
tools/deep/: building.py  dataset.py  nn.py  split.py  vectorized.py
tools/utils/: player_lookup.py
(+22 files in other folders)
