[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitchpredict"]

[project]
name = "pitchpredict"
version = "0.3.0"
description = "Predict MLB pitcher/batter behavior and outcomes using a given context"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Addison Kline", email = "akline@baseball-analytica.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pybaseball>=2.2.7",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]
