[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitchpredict"]

[project]
name = "pitchpredict"
version = "0.4.2"
description = "Predict MLB pitcher/batter behavior and outcomes using a given context"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Addison Kline", email = "akline@baseball-analytica.com" },
    { name = "Ryan Heaton", email = "ryan@charon-labs.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "filelock>=3.13.1",
    "huggingface_hub>=0.24.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pyarrow>=14.0.0",
    "pybaseball>=2.2.7",
    "rich>=14.2.0",
    "safetensors>=0.4.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
    "uvicorn>=0.38.0",
    "wandb>=0.23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.18.2",
    "nest-asyncio>=1.6.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.4",
]

[project.scripts]
pitchpredict = "pitchpredict.cli:run_cli"
